fix: resolve linting and type checking issues
- Fix f-string warnings in scenario tests
- Remove unused pytest imports
- Add type annotations for dictionaries and lists
- Fix Optional type hints to use union syntax
- Correct import paths for S3Workload and OperationMetric
- Fix return type annotation for _aggregate_current_window
- Cast mean size to int for type consistency
- All linters (ruff, mypy) now pass cleanly
- All unit tests pass successfully

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,7 @@ dev = [
     "pytest-cov>=4.1.0",
     "black>=23.0.0",
     "ruff>=0.1.0",
+    "mypy>=1.19.0",
+    "types-pyyaml>=6.0.12.20250915",
+    "types-requests>=2.32.4.20250913",
 ]
