feat: add CLI and complete S3 scenario implementations
- Add chopsticks CLI entry point with argparse
- Implement config loader for YAML configuration files
- Create missing S3 scenarios: large_objects, metadata_intensive, versioning_workload
- Map all scenarios to proper Locust task classes
- Set up metrics environment variables from config
- Support headless and web UI modes for Locust

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "boto3>=1.34.0",
 ]
 
+[project.scripts]
+chopsticks = "chopsticks.cli:main"
+
 [build-system]
 requires = ["uv_build>=0.9.5,<0.10.0"]
 build-backend = "uv_build"
