--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,3 +63,33 @@ jobs:
           name: coverage-report
           path: coverage.xml
           retention-days: 7
+
+  integration-tests:
+    name: Integration Tests
+    runs-on: ubuntu-22.04
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+      
+      - name: Set up Python
+        run: uv python install 3.12
+      
+      - name: Install dependencies
+        run: uv sync --all-groups
+      
+      - name: Install s5cmd
+        run: |
+          curl -L -o /tmp/s5cmd.tar.gz \
+            https://github.com/peak/s5cmd/releases/download/v2.2.2/s5cmd_2.2.2_Linux-64bit.tar.gz
+          sudo tar -xzf /tmp/s5cmd.tar.gz -C /usr/local/bin s5cmd
+          sudo chmod +x /usr/local/bin/s5cmd
+          s5cmd version
+      
+      - name: Run integration tests
+        run: uv run pytest tests/integration/ -v -m integration
