--- a/.github/workflows/functional-tests.yml
+++ b/.github/workflows/functional-tests.yml
@@ -103,7 +103,7 @@ jobs:
 
       - name: Run S3 Large Object Test (2 minutes)
         run: |
-          uv run chopsticks \
+          uv run chopsticks run \
             --workload-config config/s3_config.yaml \
             --scenario-config config/ci_scenario_config.yaml \
             -f src/chopsticks/scenarios/s3_large_objects.py \
@@ -231,7 +231,7 @@ jobs:
           echo "ACCESS_KEY=${ACCESS_KEY}" >> $GITHUB_ENV
           echo "SECRET_KEY=${SECRET_KEY}" >> $GITHUB_ENV
           
-          # Create S3 config WITH metrics enabled
+          # Create S3 config WITH metrics enabled and persistent mode
           mkdir -p config
           cat > config/s3_config.yaml <<EOF
           endpoint: http://127.0.0.1:80
@@ -243,7 +243,7 @@ jobs:
           driver_config:
             s5cmd_path: /usr/local/bin/s5cmd
           
-          # Enable metrics collection
+          # Enable metrics collection with persistent server
           metrics:
             enabled: true
             http_host: 0.0.0.0
@@ -251,6 +251,12 @@ jobs:
             aggregation_window_seconds: 10
             export_dir: /tmp/chopsticks_metrics
             test_name: "CI Functional Test with Metrics"
+            
+            # Enable persistent metrics server
+            persistent:
+              enabled: true
+              pid_file: /tmp/chopsticks_metrics.pid
+              state_file: /tmp/chopsticks_metrics_state.json
           EOF
           
           # Create scenario config for CI test
@@ -276,6 +282,18 @@ jobs:
           AWS_REGION: default
         run: |
           s5cmd mb s3://chopsticks-ci-test
+
+      - name: Start persistent metrics server
+        run: |
+          # Start the persistent metrics endpoint
+          uv run chopsticks metrics start --config config/s3_config.yaml
+          
+          # Verify it started
+          sleep 2
+          uv run chopsticks metrics status --config config/s3_config.yaml
+          
+          # Test endpoint is accessible
+          curl -s http://localhost:8090/metrics | head -5
 
       - name: Start Prometheus scraper in background
         run: |
@@ -308,11 +326,11 @@ jobs:
           sleep 5
           
           # Verify Prometheus is running
-          curl -s http://localhost:9090/-/healthy && echo "✅ Prometheus is healthy"
+          curl -s http://localhost:9090/-/healthy && echo "Prometheus is healthy"
 
       - name: Run S3 Large Object Test with Metrics (2 minutes)
         run: |
-          uv run chopsticks \
+          uv run chopsticks run \
             --workload-config config/s3_config.yaml \
             --scenario-config config/ci_scenario_config.yaml \
             -f src/chopsticks/scenarios/s3_large_objects.py \
@@ -418,6 +436,9 @@ jobs:
       - name: Cleanup
         if: always()
         run: |
+          # Stop persistent metrics server
+          uv run chopsticks metrics stop --config config/s3_config.yaml || true
+          
           # Stop Prometheus
           if [ -f /tmp/prometheus.pid ]; then
             kill $(cat /tmp/prometheus.pid) || true
