feat: implement persistent metrics endpoint with CLI commands
- Add 'chopsticks metrics' subcommand group (start/stop/status)
- Create MetricsDaemon class for background server management
- Add standalone server_daemon.py for persistent HTTP server
- Refactor CLI to support subcommands (run, metrics)
- Extract run logic to commands/run.py module
- Add persistent metrics configuration in workload config
- Update http_server.py with start_persistent() method
- Update tests for new CLI structure
- All 48 tests passing

Usage:
  chopsticks metrics start --config config.yaml
  chopsticks run --workload-config config.yaml -f scenario.py
  chopsticks metrics stop --config config.yaml

--- a/config/s3_config_with_metrics.yaml
+++ b/config/s3_config_with_metrics.yaml
@@ -37,3 +37,9 @@ metrics:
   
   # Test name for metadata
   test_name: "S3 Load Test with Metrics"
+  
+  # Persistent server settings
+  persistent:
+    enabled: true
+    pid_file: /tmp/chopsticks_metrics.pid
+    state_file: /tmp/chopsticks_metrics_state.json
