fix: update CI to look for metrics in correct location
The workflow was looking in /tmp/chopsticks/*/ but the config
explicitly sets export_dir to /tmp/chopsticks_metrics/, so metrics
are actually exported to /tmp/chopsticks_metrics/chopsticks_*/.

- Update validation to search in /tmp/chopsticks_metrics/*/
- Add /tmp/chopsticks_metrics/ to artifact upload paths
- Ensures CI can find and validate exported metrics files

--- a/.github/workflows/functional-tests.yml
+++ b/.github/workflows/functional-tests.yml
@@ -369,8 +369,8 @@ jobs:
 
       - name: Validate exported metrics files
         run: |
-          # Find the most recent run directory (chopsticks creates timestamped dirs in /tmp/chopsticks/)
-          RUN_DIR=$(ls -td /tmp/chopsticks/*/ 2>/dev/null | head -1)
+          # Find the most recent run directory (metrics export to /tmp/chopsticks_metrics/* as per config)
+          RUN_DIR=$(ls -td /tmp/chopsticks_metrics/*/ 2>/dev/null | head -1)
           
           if [ -z "${RUN_DIR}" ]; then
             echo "❌ Run directory not found!"
@@ -432,6 +432,7 @@ jobs:
           name: test-report-with-metrics
           path: |
             /tmp/chopsticks/
+            /tmp/chopsticks_metrics/
             /tmp/prometheus.log
           retention-days: 30
 
