docs: Add Vale to requirements for quality checks
Fix CI failures in vale-install target by adding Vale package
to requirements.txt.

Vale is required for:
- Inclusive language checking (woke)
- Style guide compliance (vale)
- Spelling checks (spelling)

The vale package downloads and installs the Vale binary
automatically when pip installed, which the Makefile's
vale-install target expects to find.

Fixes: docs-checks.yml workflows (woke, vale, spelling jobs)

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
-# Canonical theme
-canonical-sphinx>=0.5.1
+# Canonical theme (with full extras including Vale)
+canonical-sphinx[full]>=0.5.1
 
 # Core extensions
 myst-parser
@@ -26,3 +26,6 @@ packaging
 sphinxcontrib-svg2pdfconverter[CairoSVG]
 sphinx-last-updated-by-git
 sphinx-sitemap
+
+# Quality checks
+vale
