license: Add GPLv3 license and enforcement tests
Add comprehensive GPLv3 licensing to the project:

1. Add GPLv3 LICENSE file
   - Full GNU General Public License version 3 text
   - Downloaded from gnu.org official source

2. Update pyproject.toml
   - Added license = {text = "GPL-3.0-or-later"}
   - Declares SPDX identifier for package metadata

3. Add license headers to all Python files
   - Copyright (C) 2024 Canonical Ltd.
   - GPLv3 license header with standard GNU text
   - Added to all 46 source and test files
   - Created add_license_headers.py script for automation

4. Add license enforcement tests
   - test_license_file_exists: Ensures LICENSE file present
   - test_license_is_gplv3: Validates GPLv3 content
   - test_pyproject_declares_gplv3: Checks pyproject.toml
   - All tests pass ✅

5. Update README.md
   - Changed license section from MIT to GPL-3.0-or-later
   - Added copyright notice for Canonical Ltd.
   - Links to LICENSE file

The GPLv3 license ensures:
- Freedom to use, study, modify, and share
- Copyleft protection (derivatives must be GPL)
- Patent protection for users
- No warranty disclaimer

All existing tests continue to pass.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "chopsticks"
 version = "0.1.0"
 description = "Ceph stress testing framework using Locust"
 readme = "README.md"
+license = {text = "GPL-3.0-or-later"}
 authors = [
     {name = "Utkarsh Bhatt", email = "utkarsh.bhatt@canonical.com"}
 ]
