docs: Configure RTD for PR previews and remove PDF builds
Major improvements to documentation CI/CD:

1. **Read the Docs PR Previews**
   - RTD now automatically builds PR previews
   - URL format: https://chopsticks--pr-<number>.readthedocs.io
   - RTD comments on PRs with preview link
   - Previews auto-removed when PR closes
   - Main docs: https://chopsticks.readthedocs.io
   - Canonical: https://canonical-chopsticks.readthedocs-hosted.com

2. **Remove PDF Build**
   - Removed PDF from .readthedocs.yaml formats
   - Removed build-pdf job from docs-build.yml
   - PDF not useful, focus on HTML quality
   - Reduces build time and complexity

3. **Fix Documentation Health Check**
   - Remove 'make html > /dev/null 2>&1' that hid errors
   - Now shows actual build errors for debugging
   - Fixes silent failures in docs-status.yml

4. **Improve RTD Configuration**
   - Better PR detection logic in .readthedocs.yaml
   - Only build PRs with doc changes
   - Check docs/, .readthedocs.yaml, workflow files
   - Exit 183 to cancel unchanged PR builds

5. **Add Comprehensive docs/README.md**
   - Explains RTD PR preview system
   - Local development setup
   - Quality check commands
   - Contributing guidelines
   - Troubleshooting tips

Benefits:
- ✅ PR reviewers can view live docs before merge
- ✅ No manual artifact downloads needed
- ✅ Faster CI (no PDF builds)
- ✅ Better error visibility
- ✅ Auto-cleanup of PR previews

RTD will handle all PR preview hosting automatically!

--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -1,5 +1,11 @@
 name: Documentation Build
 
+# This workflow validates documentation builds locally in CI.
+# PR previews are automatically built and hosted by Read the Docs at:
+#   - Main: https://chopsticks.readthedocs.io
+#   - PRs:  https://chopsticks--pr-<number>.readthedocs.io
+# RTD builds are triggered automatically on PR creation/updates.
+
 on:
   pull_request:
     branches: [main]
@@ -78,57 +84,6 @@ jobs:
           
           echo "✅ All required documentation files present"
   
-  build-pdf:
-    name: Build PDF Documentation
-    runs-on: ubuntu-22.04
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-      
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            python3-venv \
-            latexmk \
-            fonts-freefont-otf \
-            texlive-latex-recommended \
-            texlive-latex-extra \
-            texlive-fonts-recommended \
-            texlive-font-utils \
-            texlive-xetex \
-            xindy \
-            tex-gyre \
-            dvipng
-      
-      - name: Install documentation dependencies
-        working-directory: docs
-        run: |
-          make install
-      
-      - name: Build PDF documentation
-        working-directory: docs
-        run: |
-          make pdf || echo "::warning::PDF build failed - this is non-critical"
-      
-      - name: Upload PDF artifact
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: documentation-pdf
-          path: docs/_build/*.pdf
-          retention-days: 7
-          if-no-files-found: warn
-  
-  test-rtd-config:
     name: Test RTD Configuration
     runs-on: ubuntu-22.04
     
