--- a/.github/workflows/docs-status.yml
+++ b/.github/workflows/docs-status.yml
@@ -52,7 +52,7 @@ jobs:
           start_time=$(date +%s)
           
           cd docs
-          make html > /dev/null 2>&1
+          make html
           
           end_time=$(date +%s)
           build_seconds=$((end_time - start_time))
