--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,13 +12,15 @@ build:
     python: "3.12"
   jobs:
     post_checkout:
-    - git fetch --unshallow || true
-    # Cancel building pull requests when there aren't changed in the docs directory.
-    - |
-      if [ "$READTHEDOCS_VERSION_TYPE" = "external" ] && git diff --quiet origin/main -- 'docs/' '.readthedocs.yaml';
-      then
-        exit 183;
-      fi
+      - git fetch --unshallow || true
+      # Cancel building pull requests when there aren't changes in the docs directory
+      - |
+        if [ "$READTHEDOCS_VERSION_TYPE" = "external" ]; then
+          if git diff --quiet origin/main -- docs/ .readthedocs.yaml .github/workflows/docs-*.yml; then
+            echo "No documentation changes detected, cancelling build"
+            exit 183
+          fi
+        fi
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -26,9 +28,8 @@ sphinx:
   configuration: docs/conf.py
   fail_on_warning: true
 
-# Build in additional formats
-formats:
-- pdf
+# Build in additional formats (PDF disabled - HTML only)
+formats: []
 
 # Python requirements for building docs
 python:
