--- a/.github/workflows/docs-status.yml
+++ b/.github/workflows/docs-status.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Full history for sphinx-last-updated-by-git
       
       - name: Set up Python
         uses: actions/setup-python@v5
