docs: Use canonical subdomain exclusively for all RTD URLs
The chopsticks.readthedocs.io subdomain is already in use by
another project, so we need to use the Canonical-hosted subdomain
exclusively.

Updated all documentation references:

OLD URLs:
- Main: https://chopsticks.readthedocs.io
- PRs:  https://chopsticks--pr-<number>.readthedocs.io

NEW URLs (Canonical subdomain):
- Main: https://canonical-chopsticks.readthedocs-hosted.com
- PRs:  https://canonical-chopsticks--pr-<number>.readthedocs-hosted.com

Files updated:
✅ docs/conf.py (ogp_site_url)
✅ docs/README.md (main + PR preview URLs)
✅ .github/workflows/docs-build.yml (comments)
✅ .github/workflows/docs-publish.yml (URLs + output)
✅ .github/workflows/README.md (documentation URLs)
✅ DOCUMENTATION_SETUP.md (setup instructions)

All references now point to the canonical-chopsticks.readthedocs-hosted.com
domain which is controlled by Canonical.

--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -2,8 +2,8 @@ name: Documentation Build
 
 # This workflow validates documentation builds locally in CI.
 # PR previews are automatically built and hosted by Read the Docs at:
-#   - Main: https://chopsticks.readthedocs.io
-#   - PRs:  https://chopsticks--pr-<number>.readthedocs.io
+#   - Main: https://canonical-chopsticks.readthedocs-hosted.com
+#   - PRs:  https://canonical-chopsticks--pr-<number>.readthedocs-hosted.com
 # RTD builds are triggered automatically on PR creation/updates.
 
 on:
