--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -83,7 +83,63 @@ jobs:
           done
           
           echo "✅ All required documentation files present"
+      
+      - name: Add PR comment with preview info
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const prNumber = context.issue.number;
+            const previewUrl = `https://canonical-chopsticks--pr-${prNumber}.readthedocs-hosted.com`;
+            const artifactUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
+            
+            const comment = `## 📚 Documentation Preview
+            
+            Your documentation build is complete! You can preview it in two ways:
+            
+            ### 🌐 Read the Docs Preview (Recommended)
+            The documentation will be automatically published to Read the Docs within a few minutes:
+            - **Preview URL**: ${previewUrl}
+            - This preview is automatically updated when you push new commits
+            
+            ### 📦 CI Artifact (Immediate)
+            You can also download the HTML build from this CI run:
+            - **Download**: [documentation-html artifact](${artifactUrl})
+            - Extract the ZIP and open \`index.html\` in your browser
+            
+            ---
+            *Note: The RTD preview may take 2-5 minutes to build after the CI passes.*`;
+            
+            // Check if we already commented
+            const comments = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: prNumber
+            });
+            
+            const botComment = comments.data.find(c => 
+              c.user.type === 'Bot' && c.body.includes('Documentation Preview')
+            );
+            
+            if (botComment) {
+              // Update existing comment
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: comment
+              });
+            } else {
+              // Create new comment
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: prNumber,
+                body: comment
+              });
+            }
   
+  validate-rtd:
     name: Test RTD Configuration
     runs-on: ubuntu-22.04
     
